-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.5-1, 6.7.0 RC2
-
None
-
87cf75dd2 (dev)
Code
import QtQuick import QtQuick.Controls.Basic Window { id: root width: 640 height: 480 visible: true property list<int> numbers: [1, 2, 3, 4, 5] onNumbersChanged: console.log("Updated list:", numbers) Button { text: "Shift" onClicked: { console.log("=== Starting shift ===") root.numbers.shift() console.log("=== Finished shift ===") } } }
Steps to reproduce
Run the above code and click the button
Expected outcomes
qml: === Starting shift === qml: Updated list: [2,3,4,5] qml: === Finished shift ===
Actual outcomes
qml: === Starting shift === qml: Updated list: [2,2,3,4,5] qml: Updated list: [2,3,3,4,5] qml: Updated list: [2,3,4,4,5] qml: Updated list: [2,3,4,5,5] qml: Updated list: [2,3,4,5,0] qml: Updated list: [2,3,4,5] qml: === Finished shift ===
Notes
There is a similar issue for pop():
qml: === Starting pop === qml: Updated list: [1,2,3,4,0] qml: Updated list: [1,2,3,4] qml: === Finished pop ===
- resulted in
-
QTBUG-123842 Excessive delegate creation+destruction when calling list<T>.shift() on ListView.model
-
- Closed
-
For Gerrit Dashboard: QTBUG-123882 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
562886,4 | QtQml: Optimize QV4::Sequence's shift() method | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |