QtQml: Optimize QV4::Sequence's shift() method

Most of the time we have a native shift() operation.

Fixes: QTBUG-123882
Change-Id: I1bc50f98f29918a56b5fc70d1644eb99542a3073
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>